--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "sass": "node-sass src/assets/scss/style.scss -o public/css/ -r --output-style compressed",
+    "sass:watch": "npm run sass -- -w"
   },
   "dependencies": {
     "core-js": "^3.8.3",
