--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sweetalert2": "^11.4.33",
     "vee-validate": "^4.6.9",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
