--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
+    "splitpanes": "^3.1.5",
     "sweetalert2": "^11.4.33",
     "vee-validate": "^4.6.9",
     "vue": "^3.2.13",
