--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass:watch": "npm run sass -- -w"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.3",
     "@vee-validate/rules": "^4.6.9",
     "@vuepic/vue-datepicker": "^3.5.2",
     "ag-grid-community": "^28.2.0",
