--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-final-modal": "^3.4.11",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.5",
+    "vue3-tree": "^0.11.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
