--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^7.0.3",
-    "sass-loader": "^13.0.2",
-    "vue3-markdown-it": "^1.0.10"
+    "sass-loader": "^13.0.2"
   },
   "eslintConfig": {
     "root": true,
