--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ag-grid-vue3": "^28.2.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "md-editor-v3": "^2.7.2",
     "moment": "^2.29.4",
     "splitpanes": "^3.1.5",
