--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^7.0.3",
-    "sass-loader": "^13.0.2"
+    "sass-loader": "^13.0.2",
+    "webpack-bundle-analyzer": "^4.9.1"
   },
   "eslintConfig": {
     "root": true,
