--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://blog.selosele.com/api/:path*"
+      "destination": "https://35.212.141.160:3000/api/:path*"
     }
   ]
 }
