관리자페이지 프록시 설정

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "destination": "https://35.212.141.160/api/:path*"
     },
     {
+      "source": "/system",
+      "destination": "https://blogadmin.selosele.com"
+    },
+    {
       "source": "/system/:path*",
       "destination": "https://blogadmin.selosele.com/:path*"
     }
